--- a/pacman.yml
+++ b/pacman.yml
@@ -2,34 +2,37 @@ name: Generate pacman animation
 
 on:
   schedule:
-    - cron: "0 */12 * * *"
-  workflow_dispatch:
+    - cron: "0 */12 * * *"  # roda a cada 12 horas
+  workflow_dispatch:         # permite rodar manualmente
   push:
     branches:
-      - main
+      - main                # roda ao dar push na branch main
 
 jobs:
   generate:
     permissions:
-      contents: write
+      contents: write       # para poder commitar no repo
     runs-on: ubuntu-latest
-    timeout-minutes: 5
+    timeout-minutes: 5      # timeout em 5 minutos
 
     steps:
-      - name: generate pacman-contribution-graph.svg
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Generate pacman-contribution-graph.svg
         uses: abozanona/pacman-contribution-graph@main
         with:
           github_user_name: ${{ github.repository_owner }}
 
-      - name: move SVG to dist folder
+      - name: Move SVG to dist folder
         run: |
           mkdir -p dist
           mv pacman-contribution-graph.svg dist/
 
-      - name: push pacman-contribution-graph.svg to the output branch
+      - name: Push pacman SVG to output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
-          target_branch: output
-          build_dir: dist
+          target_branch: output    # branch onde vai o SVG
+          build_dir: dist          # pasta onde está o SVG
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
